<resources>
    <string name="app_name">MoneyTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_save_transaction">Save Transaction</string>
    <string name="text_ui_mode">UI Mode</string>
    <string name="text_total_income">Total Income</string>
    <string name="text_total_expense">Total Expense</string>
    <string name="text_total_balance">Total Balance</string>
    <string name="text_recent_transactions">Recent Transactions</string>
    <string name="text_view_all">View all</string>
    <string name="text_expense_when">When</string>
    <string name="text_expense_amount">Amount</string>
    <string name="text_expense_transaction_type">Transaction type</string>
    <string name="text_expense_tag">Tag</string>
    <string name="text_expense_note">Note</string>
    <string name="text_expense_add_transaction">Save Transaction</string>
    <string name="text_expense_rupees">₹</string>
    <string name="success_expense_saved">Transaction saved successfully</string>
    <string name="success_transaction_delete">Transaction deleted successfully!</string>
    <string name="text_title">Title</string>
    <string name="text_about">About</string>
    <string name="text_filter">Filter</string>
    <string name="text_edit">Edit</string>
    <string name="text_createdAt">Created At</string>
</resources>